--- a/source/sass/blocks/services-card.scss
+++ b/source/sass/blocks/services-card.scss
@@ -1,7 +1,6 @@
 .services-card {
   box-sizing: border-box;
   position: relative;
-  min-height: 650px;
   width: 100%;
   height: 100%;
   padding: 47px 40px 80px;
@@ -17,19 +16,25 @@
     z-index: 2;
   }
 
-  @media #{$wide-vp} {
-    max-width: 350px;
-  }
-
   @media #{$middle-vp} {
-    min-height: 250px;
-    max-width: 100%;
+    height: calc(100vw / 3.08);
     padding: 37px 45px 80px;
   }
 
   @media #{$narrow-vp} {
     min-height: 250px;
+    height: calc(100vw / 1.28);
     padding: 26px 30px 60px;
+  }
+
+  @media (min-width: 1298px) {
+    height: 650px;
+    width: 350px;
+  }
+
+  @media (max-width: 1297px) and (min-width: 1024px) {
+    width: calc(100vw / 3.7);
+    height: calc(100vw / 2);
   }
 }
 
@@ -46,6 +51,12 @@
   margin: 0;
   max-width: 170px;
   z-index: 4;
+  height: 90px;
+  overflow-y: auto;
+
+  scrollbar-width: thin;
+  scrollbar-color: $color-black-perl;
+  scrollbar-track-color: $color-deep-sky-blue;
 
   @media #{$middle-vp} {
     max-width: 148px;
@@ -56,6 +67,19 @@
     line-height: 30px;
     max-width: 134px;
   }
+}
+
+.services-card h3::-webkit-scrollbar {
+  width: 3px;
+}
+
+.services-card h3::-webkit-scrollbar-track {
+  background: $color-deep-sky-blue;
+}
+
+.services-card h3::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: $color-black-perl;
 }
 
 .services-card__button {
